[tool.poetry]
name = "drone-promote"
version = "0.1.0"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]

[tool.poetry.scripts]
drone-promote = 'drone_promote.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
requests = "^2.26.0"
furl = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.9.6"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
pudb = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
